# TraceMemo

./: .gitignore  CLAUDE.md  README.md  convert_to_ncnn.py  verify_conversion.py
.claude/: PM_优化方案.md  settings.local.json
.claude/agents/: product-manager.md
.claude/rules/: known-issues.md
.cursor/plans/: android_clip图片检索_31b1b902.plan.md  clip模型精度与功能优化_7748e996.plan.md
.superpowers/brainstorm/1170-1778143816/content/: integrated-search.html  overview.html  ui-complete-design.html  ui-design-screens.html  waiting.html
.superpowers/brainstorm/1170-1778143816/state/: server-info  server-stopped
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/geocoding/: china_cities.json  (+2 more)
app/src/main/cpp/: CMakeLists.txt  clip_jni.cpp
docs/: Logcat.md  build-output.md  issue_image_vector_mismatch.md  picsearch-optimization-design.md  如何写claudemd.md
docs/GPS/: GPS定位方案.md
docs/problems/: 启动后崩溃.md
docs/superpowers/: brainstorm-index-flow.html
docs/superpowers/plans/: 2026-05-07-picsearch-optimization.md  2026-05-13-location-scene-filter.md  2026-05-14-nlp-filter-extractor.md  2026-05-14-ui-warm-gallery-plan.md  2026-05-15-index-flow-redesign.md
docs/superpowers/specs/: 2026-05-13-location-scene-filter-design.md  2026-05-14-nlp-filter-extractor-design.md  2026-05-14-ui-warm-gallery-design.md  2026-05-15-index-flow-redesign-design.md
docs/v1/: 2026-05-08-fix-image-detail-metadata.md
docs/v2/: 2026-05-13-dev-improvement-spec.md  2026-05-13-product-optimization-spec.md  global-spec.md
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
